<resources>
    <string name="app_name">MrMeteo</string>
    <string name="default_location">Location</string>
    <string name="default_temp">Choose City</string>
    <string name="change_city_description">Click Here to Change City</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="default_query">Enter city name</string>

</resources>
