<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MrMeteoController">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/weather_background"
        tools:context="com.haseebazeem.climapm.WeatherController">


        <TextView
            android:id="@+id/locationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="129dp"
            android:text="@string/default_location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="99dp"
            android:text="Weather"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_temp"
            android:id="@+id/tempTV"
            android:layout_below="@+id/changeCityButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeCityButton"
            android:src="@drawable/choose_city_simbol_small"
            android:contentDescription="@string/change_city_description"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:id="@+id/frame"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/weatherSymbolIV"
                android:src="@drawable/dunno"
                android:contentDescription="@string/weather_description"
                />

        </FrameLayout>

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="66dp"
            android:text="Music" />

        <Button
            android:id="@+id/quoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="133dp"
            android:text="Show Quote" />

        <Button
            android:id="@+id/readMoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Read More"
            android:layout_alignParentBottom="true"
            android:background="#3498db"
            android:textColor="#fff" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>